[package]
name = "polygon-arb-opportunity-bot"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Arun Rathore"]

[dependencies]
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "time"] }
anyhow = "1.0"
thiserror = "1.0"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethers = { version = "2.0", features = ["abigen", "contract", "providers", "core", "rustls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"

